--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,7 +25,7 @@
 <body class="bmenu">
   <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
     <div class="container-fluid d-flex  flex-column justify-content-center w-100">
-      <a class="navbar-brand" href="./index.html">Los2Primos</a>
+      <a class="navbar-brand" href="../index.html">Los2Primos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
